-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.0 Beta 1, 5.11
-
None
-
75f6f4d3178d9356aff9a5a14f8601ebc8b70c95 (qt/qtwebengine/5.12)
On the current dev branch (with 5.10 merged), opening an invalid link such as what://:: in this test file opens a data:text/html,chromewebdata URL (search for kUnreachableWebDataURL in the Chromium sources for context).
On 5.9, the link is passed to acceptNavigationRequest (it isn't with dev it seems), and nothing is opened.
| For Gerrit Dashboard: QTBUG-63378 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 241924,2 | Disable error pages for external URLs | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |