Disable error pages for external URLs

Failing to launch an external URL triggers a navigation to
"chrome-error://chromewebdata". Navigating to "chrome-error://chromewebdata"
results in a failed attempt to launch it as an external URL. The cycle repeats
until the computer becomes bored.

Match Chromium and disable error pages for external URL load failures.

Fixes: QTBUG-63378
Change-Id: I6c401532d658744edc56921b55efd0d040a12b1a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>